[gd_scene load_steps=3 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://scenes/camera.tscn" type="PackedScene" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelCont" type="Node2D" parent="."]

[node name="Gui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LevelBox" type="HBoxContainer" parent="Gui"]
margin_left = 17.8381
margin_top = 17.8381
margin_right = 241.838
margin_bottom = 57.8381

[node name="Prev" type="Button" parent="Gui/LevelBox"]
margin_right = 28.0
margin_bottom = 40.0
text = "<<"

[node name="Restart" type="Button" parent="Gui/LevelBox"]
margin_left = 32.0
margin_right = 89.0
margin_bottom = 40.0
text = "Restart"

[node name="Next" type="Button" parent="Gui/LevelBox"]
margin_left = 93.0
margin_right = 121.0
margin_bottom = 40.0
text = ">>"

[node name="Level" type="Label" parent="Gui/LevelBox"]
margin_left = 125.0
margin_top = 13.0
margin_right = 224.0
margin_bottom = 27.0
text = "Level 42 / 1337"
valign = 1

[node name="Label" type="Label" parent="Gui"]
margin_left = 12.0
margin_top = 69.0
margin_right = 261.0
margin_bottom = 138.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Kill all enemies
Move with direction keys
Roll by pressing CTRL, ALT or right click
Shoot with SPACE or left click"

[node name="Hearts" type="HBoxContainer" parent="Gui"]
margin_left = 398.0
margin_top = 36.0
margin_right = 438.0
margin_bottom = 76.0

[node name="GameOver" type="Label" parent="Gui"]
visible = false
margin_left = 147.0
margin_top = 227.0
margin_right = 399.0
margin_bottom = 258.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.792157, 0, 0, 1 )
text = "Game over !
Click restart"
align = 1
uppercase = true

[node name="CameraNode" parent="." instance=ExtResource( 2 )]
